Made some refactoring to PlayerController